[project]
name = "haxe-addon-mkdocs-web"
version = "0.1.0"
description = "docs for haxe addon docs"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
]
