[project]
name = "haxe-addon"
version = "0.1.0"
description = "docs for haxe addon docs"
readme = "README.md"
requires-python = "==3.14.*"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.2",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-material>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocs-minify-plugin>=0.8.0",
    "pygments>=2.20.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.entry-points."pygments.lexers"]
haxe = "BetterHaxeDocs:BetterHaxeLexer"

[tool.hatch.build.targets.wheel]
packages = []
only-include = ["BetterHaxeDocs.py"]
