[project]
name = "haxe-addon"
version = "0.1.0"
description = "Custom Haxe lexer for MkDocs Material"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mkdocs>=1.6.1",
    "mkdocs-get-deps>=0.2.2",
    "mkdocs-git-authors-plugin>=0.10.0",
    "mkdocs-git-revision-date-localized-plugin>=1.5.3",
    "mkdocs-material>=9.7.6",
    "pygments>=2.18.0",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project.entry-points."pygments.lexers"]
haxe = "BetterHaxeDocs:BetterHaxeLexer"

[tool.hatch.build.targets.wheel]
packages = ["BetterHaxeDocs"]
